# RM2021Vision

./: .gitignore  2021 rm.md  CMakeLists.txt  Main.cpp  README.md  camera_mv.Config  main.cpp  mainwindow.cpp  mainwindow.h
Armor/Include/: Armor.h  ArmorFinder.h  Classifier.h  Light.h
Armor/Include/ShowImage/: ShowImages.h
Armor/Src/: Armor.cpp  ArmorFinder.cpp  Classifier.cpp  FindArmor.cpp  FindLights.cpp  SearchingState.cpp  TrackingState.cpp
Armor/Src/ShowImage/: ShowImages.cpp
KCFcpp/: README.md
KCFcpp/src/: kcftracker.cpp  kcftracker.hpp  tracker.h
Logger/Include/: log.hpp  log_formatter.hpp  log_type.hpp  logger.hpp
Logger/Src/: log_formatter.cpp  logger.cpp
Other/Camera/: camera_mv.Config
Other/Camera/Include/: CameraWrapper.h  CameraWrapper.hpp  VideoWrapper.h  Wrapper.h  Wrapper.hpp
Other/Camera/Src/: CameraWrapper.cpp  VideoWrapper.cpp
Other/Camera/include/: CameraWrapper.hpp  RoundQueue.hpp  Wrapper.hpp
Other/Camera/src/: CameraWrapper.cpp
Other/Include/: Serial.h  SerialManager.h
Other/Serial/Include/: CRC_Check.h  Serial.h  SerialManager.h
Other/Serial/Src/: CRC_Check.cpp  Serial.cpp  SerialManager.cpp
Other/Src/: Serial.cpp  SerialManager.cpp
Predictor/Include/: Filter.h  KalmanFilter.h  KalmanPosFilter.h  PidPosition.h  Predictor.h
Predictor/Src/: KalmanFilter.cpp  KalmanPosFilter.cpp  PidPosition.cpp  Predictor.cpp
Tools/: create-startup.sh
Tools/Include/: Draw_Curve.h  Options.h  RoundQueue.h  Utils.h  constants.h  log.h  systime.h
Tools/Src/: Draw_Curve.cpp  Utils.cpp  systime.cpp
logger/: CMakeLists.txt
