CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
project(TJU-RM-2021)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")

SET(OpenCV_DIR "/usr/local/lib/cmake/opencv4")
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Threads)


# LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/Others)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Armor/Include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Tools/Include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Other/Serial/Include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Other/Camera/Include)

FILE(GLOB_RECURSE sourcefiles "Other/Serial/Src/*.cpp" "Other/Camera/Src/*.cpp" "Tools/Src/*.cpp" "Armor/Src/*.cpp")
ADD_EXECUTABLE(TJU-RM-2021 Main.cpp ${sourcefiles})

TARGET_LINK_LIBRARIES(TJU-RM-2021 ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(TJU-RM-2021 ${OpenCV_LIBS})

TARGET_LINK_LIBRARIES(TJU-RM-2021 "${PROJECT_SOURCE_DIR}/Other/Camera/libMVSDK.so")